# pluGETNRH

./: CONTRIBUTING.md  README.md  pyproject.toml
src/handlers/: handle_ftp.py  handle_input.py  handle_sftp.py
src/plugin/: plugin_downloader.py  plugin_remover.py  plugin_updatechecker.py
src/serverjar/: serverjar_paper_velocity_waterfall.py  serverjar_purpur.py  serverjar_updatechecker.py
src/tests/: test_plugin_utils.py  test_serverjar_paper_velocity_waterfall.py  test_serverjar_purpur.py
src/utils/: console_output.py  utilities.py
